file paths updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="nav-item">
           <a class="nav-link" href="">Home</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="resources/resumes/thuloa.html">Aaryaman</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/thuloa.html">Aaryaman</a></li>
       </ul>
     </nav>
     <nav class="group">
@@ -41,7 +41,7 @@
         <li class="nav-item">
           <a class="nav-link" href=>Home</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="resources/resumes/thuloa.html">Aaryaman</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/thuloa.html">Aaryaman</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Cian</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Sam</a></li>
       </ul>
@@ -72,7 +72,7 @@
           summer of 2022, working with software development and data analysis.
           Excited to learn more!
         </p>
-        <a class="P-link" href="resources/resumes/thuloa.html">Link to personal page</a>
+        <a class="P-link" href="resumes/thuloa.html">Link to personal page</a>
       </div>
       <div>
         <p class="member-name">Cian Howell</p>
