--- a/resumes/thuloa.html
+++ b/resumes/thuloa.html
@@ -9,7 +9,7 @@
       content="Personal Resume Portfolio - Aaryaman Thuloj"
     />
     <!--CSS and Fonts-->
-    <link rel="stylesheet" type="text/css" href="../../style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +24,7 @@
       <h1 class="nameHeader">Aaryaman Thuloj</h1>
       <div class="headerBarDiv">
         <ul class="headerBar">
-          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
         </ul>
       </div>
     </header>
@@ -54,7 +54,7 @@
         <div class="resumeOverviewRight">
           <div class="profPic">
             <img
-              src="../AaryamanHeadshot.jpeg"
+              src="../resources/AaryamanHeadshot.jpeg"
               class="imgWrapper"
               alt="Aaryaman Thuloj"
             />
