--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
   </section>
   <footer id="footer">
-    <p class="group-slogan">Slogan</p>
+    <p class="group-slogan"></p>
   </footer>
 </body>
 
