--- a/resumes/howelc.html
+++ b/resumes/howelc.html
@@ -56,15 +56,16 @@
                 <img src="/resources/SD-Cian.jpg" class="howelc-img" alt="Cian Howell" />
             </div>
             <div class="h-card h-card-howelc">
-                <span href="" class="p-name">Cian Howell</span>
+                <span class="p-name">Cian Howell</span>
                 <p class="p-adr h-adr">
                     <span class="p-street-address">479 2nd St.</span>
                     <span class="p-locality">Troy</span>,
                     <abbr class="p-region" title="NewYork">NY</abbr>,
                     <span class="p-postal-code">12180</span>
                 </p>
-                <span class="p-tel">+1.607.793.7135</span>
-                <a class="u-email u-email-howelc" href="mailto:ciancharleshowell@gmail.com">ciancharleshowell@gmail.com</a>
+                <p class="p-tel">+1.607.793.7135</p>
+                <a class="u-email u-email-howelc"
+                    href="mailto:ciancharleshowell@gmail.com">ciancharleshowell@gmail.com</a>
             </div>
             <div>
                 <h2 class="howelc-title">
@@ -82,21 +83,108 @@
         <h2 class="howelc-title">
             Education
         </h2>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Rensselaer Polytechnic Institute</b> | Troy, NY</p>
+            <p class="howelc-body"> May 2024</p>
+        </div>
         <p class="howelc-body">
-            <b>Rensselaer Polytechnic Institute</b> | Troy, NY <span class="end-line">May 2024</span>
+            Bachelor of Science in Information Technology and Web Science, GPA: 3.3
+        </p>
+        <p class="howelc-body">
+            Minor in Management
+        </p>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Hartwick College</b> | Oneonta, NY</p>
+            <p class="howelc-body"> Fall 2020 - Spring 2021</p>
+        </div>
+        <p class="howelc-body">
+            Major in Biology, GPA: 4.0
+        </p>
+        <p class="howelc-body">
+            Minor in Management
         </p>
         <h2 class="howelc-title">
             Relevant Coursework
         </h2>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Data Structures</b></p>
+            <p class="howelc-body">Spring 2022</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Programming concepts: functions, parameter passing, pointers, arrays, strings, structs, classes,
+                templates.</li>
+            <li>Mathematical tools: sets, functions, and relations, order notation, complexity of algorithms, proof by
+                induction.</li>
+            <li>Data structures and their representations: data abstraction and internal representation, sequences,
+                trees, binary
+                search trees, associative structures.</li>
+            <li>Algorithms: searching and sorting, generic algorithms, iterative and recursive algorithms. Methods of
+                testing
+                correctness and measuring performance.</li>
+        </ul>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Human Computer Interaction</b></p>
+            <p class="howelc-body">Spring 2022</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Fundamental theories, methods, and issues in HCI discussed within the context of organizational impact.
+            </li>
+            <li>Relevant coursework included usability testing, heuristic evaluations based on design principles, and
+                in-depth
+                analysis of UI.</li>
+        </ul>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Introduction to Information Technology and Web Science</b></p>
+            <p class="howelc-body">Fall 2021</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Introduction to the field of ITWS and its core concepts.</li>
+            <li>Problem and solution approach to help develop skills required to work through problems within IT.</li>
+            <li>Course work included Web systems design, emerging Web standards, database systems, security, computer
+                networking, team project and presentation, and written case study reviews.</li>
+        </ul>
         <h2 class="howelc-title">
             Skills
         </h2>
+        <p class="howelc-body"><b>Software Programs: </b>Microsoft Office, GitHub</p>
+        <p class="howelc-body"><b>Programing Languages: </b>C++, Python, JavaScript, HTML, CSS, experience with PHP and
+            SQL</p>
+        <p class="howelc-body"><b>Other: </b>UX, UI, HCI, MySQL</p>
         <h2 class="howelc-title">
             Clubs & Organizations
         </h2>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>NCAA D3 Football</b></p>
+            <p class="howelc-body">Fall 2020 - Spring 2021</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Fundamental theories, methods, and issues in HCI discussed within the context of organizational impact.
+            </li>
+            <li>Relevant coursework included usability testing, heuristic evaluations based on design principles, and
+                in-depth
+                analysis of UI.</li>
+        </ul>
+
         <h2 class="howelc-title">
             Experience/Projects
         </h2>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>New Visions | Ithaca, NY</b></p>
+            <p class="howelc-body">September 2019 - June2020</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Competitive, rigorous, immersion-based program.</li>
+            <li>Rotations in every department of Cayuga Medical Center.</li>
+            <li>Vigorous integrated course load.</li>
+        </ul>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Freelance Web Development, Ithaca, NY</b></p>
+            <p class="howelc-body">April 2022 - Present</p>
+        </div>
+        <ul class="howelc-body">
+            <li>https://viyerelu.net/rpi-f21-iit-t16/</li>
+            <li>https://qti.ai</li>
+        </ul>
     </section>
     <footer id="footer">
         <p class="group-slogan">Slogan</p>
