--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="resumes/thuloa.html">Aaryaman</a></li>
       </ul>
     </nav>
     <nav class="group">
-      <img id="SD-logo" src="/resources/Stealth-Dragons-Logo.svg" alt="Stealth Dragon" />
+      <a href="index.html"><img id="SD-logo" src="/resources/Stealth-Dragons-Logo.svg" alt="Stealth Dragon" /></a>
     </nav>
     <nav>
       <ul class="nav" id="right-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Sam</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Cian</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/leungs2.html">Sam</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/howelc.html">Cian</a></li>
       </ul>
     </nav>
     <!--Did not know how to do this without js here is the source https://www.youtube.com/watch?v=8QKOaTYvYUA&t=902s-->
@@ -39,11 +39,11 @@
     <nav class="nav-data">
       <ul class="mobile-nav">
         <li class="nav-item">
-          <a class="nav-link" href=>Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="resumes/thuloa.html">Aaryaman</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Cian</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Sam</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/howelc.html">Cian</a></li>
+        <li class="nav-item"><a class="nav-link" href="resumes/leungs2.html">Sam</a></li>
       </ul>
     </nav>
     <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
@@ -160,7 +160,7 @@
     </div>
   </section>
   <footer id="footer">
-    <p class="group-slogan">Slogan</p>
+    <p class="group-slogan"></p>
   </footer>
 </body>
 
