--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           doing front-end web development for multiple companies. Interested
           in product management and full stack development.
         </p>
-        <a class="P-link" href="#">Link to personal page</a>
+        <a class="P-link" href="resumes/howelc.html">Link to personal page</a>
       </div>
       <div>
         <p class="member-name">Sam Leung</p>
@@ -90,7 +90,7 @@
           AFROTC cadet. No professional experience in the IT field yet, but 
           interested in any IT or web experience opportunities.
         </p>
-        <a class="P-link" href="resources/resumes/leungs2.html">Link to personal page</a>
+        <a class="P-link" href="resumes/leungs2.html">Link to personal page</a>
       </div>
     </div>
   </section>
