--- a/resumes/thuloa.html
+++ b/resumes/thuloa.html
@@ -20,7 +20,7 @@
   </head>
 
   <body class="body-thuloa">
-    <header>
+    <header class="header-thuloa">
       <h1 class="nameHeader">Aaryaman Thuloj</h1>
       <div class="headerBarDiv">
         <ul class="headerBar">
@@ -29,7 +29,7 @@
       </div>
     </header>
 
-    <section class="overview">
+    <section class="overview sec-thuloa">
       <div class="sectionWrapper">
         <div class="resumeOverviewLeft">
           <h2 class="thuloa-title">Overview</h2>
@@ -77,7 +77,7 @@
       </div>
     </section>
 
-    <section class="Education">
+    <section class="Education sec-thuloa">
       <h2 class="thuloa-title">Education</h2>
       <div class="sectionWrapper">
         <div class="educationLeft">
@@ -139,7 +139,7 @@
       </div>
     </section>
 
-    <section class="Experience">
+    <section class="Experience sec-thuloa">
       <h2 class="thuloa-title">Experience</h2>
       <div class="sectionWrapperThreeSec">
         <div class="job">
@@ -239,7 +239,7 @@
       </div>
     </section>
 
-    <section class="skills">
+    <section class="skills sec-thuloa">
       <h2 class="thuloa-title">Skills</h2>
       <div class="skillsWrapper">
         <p>
