Slogan , comments, and descriptions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!--Navigation Bar-->
+  <!--Navigation Bar for PC and Large Tablets-->
   <header class="navbar">
     <nav>
       <ul class="nav">
@@ -35,6 +35,7 @@
       </ul>
     </nav>
     <!--Did not know how to do this without js here is the source https://www.youtube.com/watch?v=8QKOaTYvYUA&t=902s-->
+    <!--Navigation Bar for Mobile-->
     <input type="checkbox" id="nav-toggler" class="nav-toggler" />
     <nav class="nav-data">
       <ul class="mobile-nav">
@@ -49,7 +50,7 @@
     <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
         alt="expand/collapse menu" /></label>
   </header>
-
+  <!--Sections for group member photos and introductions-->
   <section id="group-intro">
     <h2 class="members">Group Members</h2>
     <div class="group-photos">
@@ -86,15 +87,15 @@
       <div>
         <p class="member-name">Sam Leung</p>
         <p class="member-bio">
-          Sophomore ITWS major on an informational security focus track and 
-          AFROTC cadet. No professional experience in the IT field yet, but 
+          Sophomore ITWS major on an informational security focus track and
+          AFROTC cadet. No professional experience in the IT field yet, but
           interested in any IT or web experience opportunities.
         </p>
         <a class="P-link" href="resumes/leungs2.html">Link to personal page</a>
       </div>
     </div>
   </section>
-
+  <!--Section to display three group projects-->
   <section id="group-projects">
     <h3 class="projects">Projects</h3>
     <div class="project-1">
@@ -105,32 +106,21 @@
       </div>
       <div>
         <p class="project-desc">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-          nesciunt, quisquam omnis illo asperiores vel temporibus velit
-          cupiditate quos numquam, earum aut recusandae deleniti amet totam
-          eius distinctio neque! Ducimus, dignissimos enim distinctio atque
-          praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
-          hic consequuntur libero quo veritatis nihil delectus harum! Quis
-          necessitatibus provident vel. Sit maiores nisi non voluptates
-          excepturi consectetur labore. Quis vero reprehenderit iure fugiat
-          soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-          doloribus corporis quae nesciunt?
+          The main function of DateBase is to help users track the shelf life of perishable products. A user
+          enters four pieces of data about the food item, including date, name, location, and quantity. This data is
+          locally stored and displayed on the calendar. When the date passes, the user will be notified via the calendar
+          page. The user will then manually clear the notification when they see fit. This project focused on JavaScript
+          and locally storage. The calendar is created dynamically, completely with vanilla JavaScript.
         </p>
       </div>
     </div>
     <div class="project-2">
       <div>
         <p class="project-desc">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-          nesciunt, quisquam omnis illo asperiores vel temporibus velit
-          cupiditate quos numquam, earum aut recusandae deleniti amet totam
-          eius distinctio neque! Ducimus, dignissimos enim distinctio atque
-          praesentium unde, quaerat corrupti animi dolorum at deleniti nobis
-          hic consequuntur libero quo veritatis nihil delectus harum! Quis
-          necessitatibus provident vel. Sit maiores nisi non voluptates
-          excepturi consectetur labore. Quis vero reprehenderit iure fugiat
-          soluta repellat accusantium placeat. Dignissimos magnam quaerat quam
-          doloribus corporis quae nesciunt?
+          We were approached by the founder and CEO of Qti.ai to do the front-end development of two pages on his
+          website. Bootstrap was the framework we chose to utilize, as many developers use bootstrap, it is easy to
+          learn, and it can be used Node.js and React. Not much design choice was given, as the CEO wanted the website
+          to appear a specific way. Essentially, we were given a Figma frame and were asked to make the website match.
         </p>
       </div>
       <div>
@@ -148,10 +138,10 @@
       <div>
         <p class="project-desc">
           This project's goal was to create a comfortable and user friendly
-          planner webpage. The goal was to allow stressed high schoolers and 
+          planner webpage. The goal was to allow stressed high schoolers and
           college students to have an easily navigatable and simple interface
           to keep track of their assignments and tests. The interface allowed
-          users to simply input their assignment details, the due date, and 
+          users to simply input their assignment details, the due date, and
           their priority listing for the assignment. The website would then
           order the assignments based on priority and then due date and guide
           users in which assignments they should complete first.
@@ -159,8 +149,9 @@
       </div>
     </div>
   </section>
+  <!--Footer with slogan-->
   <footer id="footer">
-    <p class="group-slogan"></p>
+    <p class="group-slogan">Design. Create. Execute.</p>
   </footer>
 </body>
 
