--- a/resumes/howelc.html
+++ b/resumes/howelc.html
@@ -169,7 +169,7 @@
             Experience/Projects
         </h2>
         <div class="spacing-box">
-            <p class="howelc-body"><b>New Visions | Ithaca, NY</b></p>
+            <p class="howelc-body"><b>New Visions |</b> Ithaca, NY</p>
             <p class="howelc-body">September 2019 - June2020</p>
         </div>
         <ul class="howelc-body">
@@ -178,16 +178,25 @@
             <li>Vigorous integrated course load.</li>
         </ul>
         <div class="spacing-box">
-            <p class="howelc-body"><b>Freelance Web Development, Ithaca, NY</b></p>
+            <p class="howelc-body"><b>Freelance Web Development |</b> Ithaca, NY</p>
             <p class="howelc-body">April 2022 - Present</p>
         </div>
         <ul class="howelc-body">
             <li>https://viyerelu.net/rpi-f21-iit-t16/</li>
             <li>https://qti.ai</li>
         </ul>
+        <div class="spacing-box">
+            <p class="howelc-body"><b>Custom PC Building |</b> Ithaca, NY</p>
+            <p class="howelc-body">September 2019 - Present</p>
+        </div>
+        <ul class="howelc-body">
+            <li>Worked with customer to get all necessary parts based on use case, design preferences, and budget.</li>
+            <li>Assembled and set up computer. Customer had option to be involed and learn as we built together.</li>
+            <li>Lifetime support and troubleshooting with phyiscal hardware related issues.</li>
+        </ul>
     </section>
     <footer id="footer">
-        <p class="group-slogan">Slogan</p>
+        <p class="group-slogan">Design. Create. Execute.</p>
     </footer>
 </body>
 
