--- a/resumes/howelc.html
+++ b/resumes/howelc.html
@@ -36,6 +36,7 @@
             </ul>
         </nav>
         <!--Did not know how to do this without js here is the source https://www.youtube.com/watch?v=8QKOaTYvYUA&t=902s-->
+        <!--mobile nav-->
         <input type="checkbox" id="nav-toggler" class="nav-toggler" />
         <nav class="nav-data">
             <ul class="mobile-nav">
@@ -50,6 +51,7 @@
         <label for="nav-toggler" class="nav-toggler-icon"><img src="/resources/Hamburger_icon_white.svg"
                 alt="expand/collapse menu" /></label>
     </header>
+    <!--h-card, objective statement, and photo-->
     <section id="howelc-info">
         <div class="howelc-row1">
             <div>
@@ -79,7 +81,9 @@
             </div>
         </div>
     </section>
+    <!--Body of resume-->
     <section id="howelc-resume">
+        <!--Education-->
         <h2 class="howelc-title">
             Education
         </h2>
@@ -103,6 +107,7 @@
         <p class="howelc-body">
             Minor in Management
         </p>
+        <!--Coursework-->
         <h2 class="howelc-title">
             Relevant Coursework
         </h2>
@@ -143,6 +148,7 @@
             <li>Course work included Web systems design, emerging Web standards, database systems, security, computer
                 networking, team project and presentation, and written case study reviews.</li>
         </ul>
+        <!--Skills-->
         <h2 class="howelc-title">
             Skills
         </h2>
@@ -164,7 +170,7 @@
                 in-depth
                 analysis of UI.</li>
         </ul>
-
+        <!--Experience and Projects-->
         <h2 class="howelc-title">
             Experience/Projects
         </h2>
@@ -195,6 +201,7 @@
             <li>Lifetime support and troubleshooting with phyiscal hardware related issues.</li>
         </ul>
     </section>
+    <!--Footer with slogan-->
     <footer id="footer">
         <p class="group-slogan">Design. Create. Execute.</p>
     </footer>
