final changes to personal site

--- a/resumes/leungs2.html
+++ b/resumes/leungs2.html
@@ -19,10 +19,11 @@
         <div class="p-tel">(516)-853-6507</div>
         <a class="u-email" href="mailto:leungs2@rpi.edu">leungs2@rpi.edu</a>
     </div>
+    <hr />
     <p>    
-        ITWS undergraduate student looking for some experience in web development
+        <i>ITWS undergraduate student looking for some experience in web development</i>
     </p>
-    <p>Education</p>
+    <p><b>Education</b></p>
     <ul>
         <li>
             <a href="https://rpi.edu/">Rensselaer Polytechnic Institute </a>
@@ -47,7 +48,7 @@
             </ul>
         </li>
     </ul>
-    <p>Work Experience</p>
+    <p><b>Work Experience</b></p>
     <ul>
         <li>
             Leaders Summer Camp
@@ -83,7 +84,7 @@
             </ul>
         </li>
     </ul>
-    <p>Skills</p>
+    <p><b>Skills</b></p>
     <ul>
         <li>Basic Programming</li>
         <li>Critical Thinking</li>
