--- a/resumes/leungs2.html
+++ b/resumes/leungs2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en-US">
 <head>
+    <!--title, meta links, and css link-->
     <title>
         Samuel Leung
     </title>
@@ -8,9 +9,12 @@
     <meta name="viewport" content="width-device-width, initial-scale-1" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
-<body>
-    <div class="h-card leungs2">
+<body class="leung-body">
+    <!--Top part with name and priv info with h-card formatting-->
+    <div class="h-card leung-name">
         <span class="p-name"><b>Samuel Leung</b></span>
+    </div>
+    <div class="h-card leungs2">
         <div class="p-street-address">126 Wentworth Ave</div>
         <span class="locality">Albertson</span>
         <abbr class="region" title="New York">NY</abbr>
@@ -20,9 +24,11 @@
         <a class="u-email" href="mailto:leungs2@rpi.edu">leungs2@rpi.edu</a>
     </div>
     <hr />
-    <p>    
+    <p>
+        <!--objective/about me in italics-->    
         <i>ITWS undergraduate student looking for some experience in web development</i>
     </p>
+    <!--education section with links to institutions-->
     <p><b>Education</b></p>
     <ul>
         <li>
@@ -48,6 +54,8 @@
             </ul>
         </li>
     </ul>
+    <br />
+    <!--work experience sections (couldn't find links)-->
     <p><b>Work Experience</b></p>
     <ul>
         <li>
@@ -84,6 +92,8 @@
             </ul>
         </li>
     </ul>
+    <br />
+    <!--skills section-->
     <p><b>Skills</b></p>
     <ul>
         <li>Basic Programming</li>
@@ -95,6 +105,7 @@
         <li>Quick Learning</li>
         <li>Tech Savvy</li>
     </ul>
+    <!--self portrait hidden at bottom because it's a bad picture-->
     <img src="../resources/samzoompic.jpg"
          alt="Samuel Leung" />
 </body>
