commented my code

--- a/resumes/thuloa.html
+++ b/resumes/thuloa.html
@@ -20,6 +20,7 @@
   </head>
 
   <body class="body-thuloa">
+    <!-- Resume header w/ link back to homepage -->
     <header class="header-thuloa">
       <h1 class="nameHeader">Aaryaman Thuloj</h1>
       <div class="headerBarDiv">
@@ -29,7 +30,9 @@
       </div>
     </header>
 
+    <!-- Overview Section -->
     <section class="overview sec-thuloa">
+      <!-- sectionWrapper generalizes how child divs are split on the screen -->
       <div class="sectionWrapper">
         <div class="resumeOverviewLeft">
           <h2 class="thuloa-title">Overview</h2>
@@ -59,6 +62,7 @@
               alt="Aaryaman Thuloj"
             />
           </div>
+          <!-- h-card microformat to hold contact information and mark it up semantically -->
           <div class="h-card h-card-thuloa">
             <p class="p-name cardp">Aaryaman Thuloj</p>
             <p class="p-adr cardp">12 Myrtle Ave, Troy, NY, 12180</p>
@@ -77,6 +81,7 @@
       </div>
     </section>
 
+    <!-- Education Section -->
     <section class="Education sec-thuloa">
       <h2 class="thuloa-title">Education</h2>
       <div class="sectionWrapper">
@@ -89,6 +94,7 @@
             >
           </h4>
           <ul>
+            <!-- Strong used to bold and semantically mark important feats -->
             <li><strong>GPA: </strong>3.95, <strong>Major GPA: </strong>4.0</li>
             <li>
               <strong>Relevant Coursework: </strong>Data Structures, Discrete
@@ -114,6 +120,7 @@
           <h3>John P. Stevens High School | Sep. 2017 - Jun. 2021</h3>
           <h4><em>High School Diploma</em></h4>
           <ul>
+            <!-- Strong used to bold and semantically mark important feats -->
             <li><strong>GPA: </strong>3.8</li>
             <li><strong>SAT: </strong>1570/1600</li>
             <li>
@@ -139,10 +146,14 @@
       </div>
     </section>
 
+    <!-- Work Experience Section -->
     <section class="Experience sec-thuloa">
       <h2 class="thuloa-title">Experience</h2>
+      <!-- Section wrapper with three items evenly spaced -->
       <div class="sectionWrapperThreeSec">
+        <!-- Job class for each for semantic understanding and spacing -->
         <div class="job">
+          <!-- spans used for jobs for same-line usage -->
           <span class="left"><strong>TechStart Intern</strong></span>
           <span class="right"><strong>Remote (Plano, TX)</strong></span>
           <br />
@@ -183,9 +194,11 @@
         </div>
 
         <div class="job">
+          <!-- Strong used for role and location, to bold-->
           <span class="left"><strong>Custom Computer Builder</strong></span>
           <span class="right"><strong>Edison, NJ</strong></span>
           <br />
+          <!-- em used to emphasize and highlight the dates and company -->
           <span class="left"><em>Freelance</em></span>
           <span class="right"><em>Sep. 2017 - Sep. 2021</em></span>
           <br />
@@ -239,6 +252,7 @@
       </div>
     </section>
 
+    <!-- Skills Section -->
     <section class="skills sec-thuloa">
       <h2 class="thuloa-title">Skills</h2>
       <div class="skillsWrapper">
