--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="project-3">
       <div>
-        <h4 class="project-title">Project 3</h4>
+        <h4 class="project-title">Do ITWS</h4>
         <img class="project-screenshot" src="/resources/DOITWS.png" alt="DO ITWS Landing Page" />
         <a class="P-link" href="">Link to Project</a>
       </div>
