--- a/constitution/index.html
+++ b/constitution/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>Constitution Day</title>
 </head>
 
@@ -18,32 +20,42 @@
     <header class="CD-header">
         <h1 class="CD-title"><span class="blue-text">The United</span> States Constitution</h1>
         <nav class="nav-bar">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article I</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article II</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article III</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article IV</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article V</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article VI</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Article VII</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Amendments</a>
-                </li>
-            </ul>
+
+            <a class="nav-link" href="#">Article I</a>
+
+
+            <a class="nav-link" href="#">Article II</a>
+
+
+            <a class="nav-link" href="#">Article III</a>
+
+
+            <a class="nav-link" href="#">Article IV</a>
+
+
+            <a class="nav-link" href="#">Article V</a>
+
+
+            <a class="nav-link" href="#">Article VI</a>
+
+
+            <a class="nav-link" href="#">Article VII</a>
+
+            <div class="dropdown">
+                <a class="drop-link" href="#">Amendments<i class="bi bi-caret-down-fill"></i></a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">First</a>
+                    <a class="dropdown-item" href="#">Second</a>
+                    <a class="dropdown-item" href="#">Third</a>
+                    <a class="dropdown-item" href="#">Fourth</a>
+                    <a class="dropdown-item" href="#">Fifth</a>
+                    <a class="dropdown-item" href="#">Sixth</a>
+                    <a class="dropdown-item" href="#">Seventh</a>
+                    <a class="dropdown-item" href="#">Eighth</a>
+                    <a class="dropdown-item" href="#">Ninth</a>
+                    <a class="dropdown-item" href="#">Tenth</a>
+                </div>
+            </div>
         </nav>
     </header>
 
