Accordions and Style Updates
Added the remainder of the accordions to the amendments. Changed bootstrap UI elements styling and added a old paper background to help with late 2000s aesthetic.

--- a/constitution/index.html
+++ b/constitution/index.html
@@ -20,9 +20,9 @@
 
 <body class="min-vh-100 justify-content-between">
     <!--Website Title and navbar-->
-    <header class="CD-header container-fluid sticky-top">
+    <header class="CD-header container-fluid sticky-top ">
         <h1 class="CD-title"><span class="blue-text">The United</span> States Constitution</h1>
-        <nav class="navbar navbar-dark navbar-expand-md">
+        <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="container-md">
                 <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#CD-navbar" aria-controls="CD-navbar" aria-expanded="false"
@@ -64,16 +64,16 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Amendments</a>
                             <ul id="navbarDropdown" class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">First</a></li>
-                                <li><a class="dropdown-item" href="#">Second</a></li>
-                                <li><a class="dropdown-item" href="#">Third</a></li>
-                                <li><a class="dropdown-item" href="#">Fourth</a></li>
-                                <li><a class="dropdown-item" href="#">Fifth</a></li>
-                                <li><a class="dropdown-item" href="#">Sixth</a></li>
-                                <li><a class="dropdown-item" href="#">Seventh</a></li>
-                                <li><a class="dropdown-item" href="#">Eighth</a></li>
-                                <li><a class="dropdown-item" href="#">Ninth</a></li>
-                                <li><a class="dropdown-item" href="#">Tenth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-1">First</a></li>
+                                <li><a class="dropdown-item" href="#amendment-2">Second</a></li>
+                                <li><a class="dropdown-item" href="#amendment-3">Third</a></li>
+                                <li><a class="dropdown-item" href="#amendment-4">Fourth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-5">Fifth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-6">Sixth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-7">Seventh</a></li>
+                                <li><a class="dropdown-item" href="#amendment-8">Eighth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-9">Ninth</a></li>
+                                <li><a class="dropdown-item" href="#amendment-10">Tenth</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -587,6 +587,7 @@
     </section>
     <!--Article VII section-->
     <section id="article-vii" class="container-md sec-vert-format">
+        <h2 class="CD-title-2">Article VII</h2>
         <div class="accordion accordion-flush accordion-spacing" id="article-vii-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-vii-a-heading">
@@ -606,12 +607,30 @@
                 </div>
             </div>
         </div>
-        <h2 class="CD-title-2">Article VII</h2>
         <p class="CD-body">The Ratification of the Conventions of nine States, shall be sufficient for the Establishment
             of this Constitution between the States so ratifying the Same.</p>
     </section>
     <section id="amendment-1" class="container-md sec-vert-format">
         <h2 class="CD-title-2">First Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-1-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-1-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-1-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-1-a-collapse">
+                        First Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-1-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-1-a-heading"
+                    data-bs-parent="#amendment-1-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">Congress shall make no law respecting an establishment of religion, or prohibiting the free
             exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably
             to
@@ -619,17 +638,74 @@
     </section>
     <section id="amendment-2" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Second Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-2-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-2-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-2-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-2-a-collapse">
+                        Second Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-2-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-2-a-heading"
+                    data-bs-parent="#amendment-2-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">A well regulated Militia, being necessary to the security of a free State, the right of the
             people to keep and bear Arms, shall not be infringed.</p>
     </section>
     <section id="amendment-3" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Third Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-3-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-3-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-3-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-3-a-collapse">
+                        Third Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-3-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-3-a-heading"
+                    data-bs-parent="#amendment-3-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">No Soldier shall, in time of peace be quartered in any house, without the consent of the
             Owner,
             nor in time of war, but in a manner to be prescribed by law.</p>
     </section>
     <section id="amendment-4" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Fourth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-4-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-4-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-4-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-4-a-collapse">
+                        Fourth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-4-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-4-a-heading"
+                    data-bs-parent="#amendment-4-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">The right of the people to be secure in their persons, houses, papers, and effects, against
             unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable
             cause,
@@ -638,6 +714,25 @@
     </section>
     <section id="amendment-5" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Fifth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-5-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-5-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-5-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-5-a-collapse">
+                        Fifth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-5-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-5-a-heading"
+                    data-bs-parent="#amendment-5-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">No person shall be held to answer for a capital, or otherwise infamous crime, unless on a
             presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the
             Militia, when in actual service in time of War or public danger; nor shall any person be subject for the
@@ -650,6 +745,25 @@
     </section>
     <section id="amendment-6" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Sixth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-6-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-6-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-6-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-6-a-collapse">
+                        Sixth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-6-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-6-a-heading"
+                    data-bs-parent="#amendment-6-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial,
             by
             an impartial jury of the State and district wherein the crime shall have been committed, which district
@@ -661,6 +775,25 @@
     </section>
     <section id="amendment-7" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Seventh Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-7-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-7-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-7-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-7-a-collapse">
+                        Seventh Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-7-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-7-a-heading"
+                    data-bs-parent="#amendment-7-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">In Suits at common law, where the value in controversy shall exceed twenty dollars, the right
             of
             trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise re-examined in any Court
@@ -669,16 +802,73 @@
     </section>
     <section id="amendment-8" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Eigth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-8-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-8-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-8-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-8-a-collapse">
+                        Eighth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-8-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-8-a-heading"
+                    data-bs-parent="#amendment-8-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual
             punishments inflicted.</p>
     </section>
     <section id="amendment-9" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Ninth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-9-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-9-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-9-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-9-a-collapse">
+                       Ninth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-9-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-9-a-heading"
+                    data-bs-parent="#amendment-9-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">The enumeration in the Constitution, of certain rights, shall not be construed to deny or
             disparage others retained by the people.</p>
     </section>
     <section id="amendment-10" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Tenth Amendment</h2>
+        <div class="accordion accordion-flush accordion-spacing" id="amendment-10-accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="amendment-10-a-heading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#amendment-10-a-collapse" aria-expanded="false"
+                        aria-controls="amendment-10-a-collapse">
+                        Tenth Amendment Explained
+                    </button>
+                </h2>
+                <div id="amendment-10-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-10-a-heading"
+                    data-bs-parent="#amendment-10-accordion">
+                    <div class="accordion-body">
+                        <p class="CD-body">
+                            There will be a Congress with a Senate and a House of Representation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p class="CD-body">The powers not delegated to the United States by the Constitution, nor prohibited by it to
             the
             States, are reserved to the States respectively, or to the people.</p>
